# mtgcompare

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  compare.py  docker-compose.yml  logging.conf  mtgcompare.spec  pyproject.toml  requirements.txt  scrapper.py  utils.py
.github/workflows/: ci.yml  release.yml
docs/: feature_gaps.md  perf_improvements.md  shop_integration_plan.md
examples/: card_list.txt
mtgcompare/: __init__.py  auth.py  cache.py  compare.py  db.py  history_import.py  inventory.py  launcher.py  log_context.py  run_log.py  scrapper.py  shops.py  utils.py  web.py
mtgcompare/scrappers/: __init__.py  _base.py  blackfrog.py  cardrush.py  enndalgames.py  hareruya.py  mintmall.py  scryfall.py  serra.py  singlestar.py  tokyomtg.py
mtgcompare/static/: cardpreview.js  decklist-stream.js  inventoryadd.js  paginatedtable.js  searchautocomplete.js
mtgcompare/templates/: _decklist_row.html  _decklist_styles.html  _inventory_stats.html  _inventory_table.html  _macros.html  _market_summary.html  _market_table.html  _nav.html  _pagination.html  base.html  decklist.html  error.html  index.html  inventory.html  market.html
scrappers/: card_kingdom.py  hareruya.py
scripts/: build.ps1  build.sh  dev-push.sh  start.ps1  start.sh  stop.ps1  stop.sh
tests/: capture_fixtures.py  conftest.py  test_auth.py  test_blackfrog.py  test_cache.py  test_canary.py  test_cardrush.py  test_db_layer.py  test_enndalgames.py  test_hareruya.py  test_history_import.py  test_history_pg.py  test_mintmall.py  test_run_log.py  test_scrapper_errors.py  test_scryfall.py  test_serra.py  test_shops.py  test_singlestar.py  test_tokyomtg.py  test_web_helpers.py
tests/e2e/: conftest.py  test_index_search.py  test_inventory_add.py  test_inventory_selection.py  test_market.py  test_paginated_table.py
tests/fixtures/: blackfrog_force_of_will.html  cardrush_force_of_will.html  enndalgames_force_of_will.html  hareruya_force_of_will.html  hareruya_force_of_will_lazy.html  hareruya_force_of_will_unisearch.json  mintmall_force_of_will.html  scryfall_force_of_will.json  serra_force_of_will.html  singlestar_force_of_will.html  tokyomtg_force_of_will.html
