[project]
name = "mtgcompare"
version = "0.1.0"
description = "Compares prices for Magic The Gathering cards across online shops."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14",
    "flask>=3.1",
    "requests>=2.33",
    "yfinance>=1.3",
]

[project.scripts]
mtgcompare = "mtgcompare.compare:main"
mtgcompare-web = "mtgcompare.web:main"
mtgcompare-app = "mtgcompare.launcher:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
]
desktop = [
    "pillow>=10.0",
    "pystray>=0.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: hits real external sites; opt-in with `uv run pytest -m live`",
]
