[project]
name = "mtgcompare"
version = "0.1.0"
description = "Compares prices for Magic The Gathering cards across online shops."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14",
    "duckdb>=1.2",
    "flask>=3.1",
    "psycopg2-binary>=2.9",
    "requests>=2.33",
    "sqlalchemy>=2.0",
    "yfinance>=1.3",
]

[project.scripts]
mtgcompare = "mtgcompare.compare:main"
mtgcompare-web = "mtgcompare.web:main"
mtgcompare-app = "mtgcompare.launcher:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15.12",
]
desktop = [
    "pillow>=10.0",
    "pystray>=0.19",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E701"]  # allow compact single-line if/return style

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live and not canary'"
markers = [
    "live: hits real external sites; opt-in with `uv run pytest -m live`",
    "canary: smoke-tests all shop endpoints for API/structure changes; opt-in with `uv run pytest -m canary`",
    "pg: requires a real PostgreSQL instance (DATABASE_URL env var); opt-in with `uv run pytest -m pg`",
]
