[project]
name = "mtgcompare"
version = "0.1.0"
description = "Compares prices for Magic The Gathering cards across online shops."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14",
    "cachetools>=5.5",
    "selectolax>=0.3.21",
    "duckdb>=1.2",
    "flask>=3.1",
    "flask-wtf>=1.2",
    "gunicorn>=23.0",
    "orjson>=3.10",
    "psycopg2-binary>=2.9",
    "pyjwt[crypto]>=2.8",
    "requests>=2.33",
    "sqlalchemy>=2.0",
    "workos>=5.0",
    "yfinance>=1.3",
]

[project.scripts]
mtgcompare = "mtgcompare.compare:main"
mtgcompare-web = "mtgcompare.web:main"
mtgcompare-app = "mtgcompare.launcher:main"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=9.0",
    "ruff>=0.15.12",
]
e2e = [
    "pytest-playwright>=0.5",
]
desktop = [
    "pillow>=10.0",
    "pystray>=0.19",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# E/F/W/I: pycodestyle, pyflakes, isort
# B:       flake8-bugbear (likely bugs: mutable defaults, unused loop vars, etc.)
# S:       flake8-bandit (security: shell=True, weak hashes, hardcoded secrets, dynamic SQL)
# UP:      pyupgrade (modern Python idioms — we target 3.12)
# SIM:     flake8-simplify (small readability wins)
select = ["E", "F", "W", "I", "B", "S", "UP", "SIM"]
ignore = ["E701"]  # allow compact single-line if/return style

[tool.ruff.lint.per-file-ignores]
# Test files frequently embed inline HTML fixtures whose lines naturally
# overflow once they include Japanese text and verbose CSS class names.
# Forcing line breaks there hurts readability without catching real bugs.
# S101 (assert) is the standard pytest pattern.
"tests/*" = ["E501", "S101"]

[tool.pyright]
# Type-check the package only; tests stay untyped for now.
# `basic` mode: catches real bugs (None misuse, wrong arg types, missing
# attributes) without forcing annotations everywhere — the right level for a
# codebase that's adopting types gradually.
include = ["mtgcompare"]
exclude = ["**/__pycache__", ".venv", "mtgjson", "dist", "build"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live and not canary and not e2e'"
markers = [
    "live: hits real external sites; opt-in with `uv run pytest -m live`",
    "canary: smoke-tests all shop endpoints for API/structure changes; opt-in with `uv run pytest -m canary`",
    "pg: requires a real PostgreSQL instance (DATABASE_URL env var); opt-in with `uv run pytest -m pg`",
    "e2e: Playwright-driven browser tests; opt-in with `uv run --group e2e pytest -m e2e`",
]
